k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ewallet
  labels:
    app: ewallet
    environment: development
